log/build_2023-05-07_02-56-12/PSO_pkg/stderr.log
  File "/home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg/Drone.py", line 40
    def listener_callback(self,(msg,point)):
                               ^
SyntaxError: invalid syntax

